deploy/tests/config/2.2.ingressclass.yaml
kind: IngressClass
apiVersion: networking.k8s.io/v1
metadata:
  name: haproxy
spec:
  controller: haproxy.org/ingress-controller/haproxy
