deploy/tests/config/2.rbac.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
 name: haproxy-ingress-service-account
 namespace: haproxy-controller
---
kind: ClusterRole
apiVersion: rbac.authorization.k8s.io/v1
metadata:
 name: haproxy-ingress-cluster-role
rules:
 - apiGroups:
     - ""
   resources:
     - configmaps
     - endpoints
     - nodes
     - pods
     - services
     - namespaces
     - events
     - serviceaccounts
   verbs:
     - get
     - list
     - watch
     - create
     - patch
     - update
 - apiGroups:
   - "extensions"
   - "networking.k8s.io"
   resources:
     - ingresses
     - ingresses/status
     - ingressclasses
   verbs:
     - get
     - list
     - watch
 - apiGroups:
   - "extensions"
   - "networking.k8s.io"
   resources:
     - ingresses/status
   verbs:
     - update
 - apiGroups:
     - ""
   resources:
     - secrets
   verbs:
     - get
     - list
     - watch
     - create
     - patch
     - update
 - apiGroups:
     - extensions
   resources:
     - ingresses
   verbs:
     - get
     - list
     - watch
     - update
 - apiGroups:
    - core.haproxy.org
   resources:
     - '*'
   verbs:
     - get
     - list
     - watch
     - update
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: haproxy-ingress-cluster-role-binding
  namespace: haproxy-controller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: haproxy-ingress-cluster-role
subjects:
- kind: ServiceAccount
  name: haproxy-ingress-service-account
  namespace: haproxy-controller
