deploy/tests/config/echo-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: 'haproxytech/http-echo:latest'
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: http-echo
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app: http-echo
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: http-echo
  annotations:
    ingress.class: haproxy
spec:
  rules:
  - host: "echo.haproxy.local"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: http-echo
              port:
                name: http
